@@ -1,8 +1,0 @@
-# $NetBSD: DEINSTALL,v 1.2 2012/03/09 14:16:57 obache Exp $
-
-case "${STAGE}" in
-DEINSTALL)
-	dest="${PKG_PREFIX}/lib/opera/plugins/nppdf.so"
-	${RM} -f "$dest"
-	;;
-esac
